[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meteora_webhook"
version = "0.1.0"
description = "Discord webhook service for Meteora DLMM pool events"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "structlog>=23.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]